# cryptography

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: rust.yml
dotnet/: DeRecDotnetExample.sln  README.md
dotnet/DeRecDotnetExample/: DeRecDotnetExample.csproj  Program.cs
dotnet/DeRecDotnetExample/Properties/: launchSettings.json
dotnet/DeRecDotnetExample/Protos/: derec.proto  service.proto
example-app/: Makefile  pom.xml
example-app/src/main/java/com/example/: App.java
grpc-server/: .dockerignore  Cargo.toml  README.md  build-docker-image.sh  build.rs  dockerfile
grpc-server/proto/: service.proto
grpc-server/src/: main.rs
grpc-server/src/protos/: derec_crypto.rs  mod.rs
jni/: .gitignore  DerecCryptoBridge.h  DerecCryptoBridge.java  Makefile  build.gradle  settings.gradle
jni/derec_crypto_bridge_lib/: Cargo.toml  build.rs
jni/derec_crypto_bridge_lib/src/: lib.rs
jni/derec_crypto_bridge_lib/src/proto/bridge/: bridge.proto
jni/derec_crypto_bridge_lib/src/protos/: bridge.proto
jni/src/: DerecCryptoBridgeTestMain.java  DerecCryptoImpl.java  DerecCryptoInterface.java  MerkledVSS.java  MerkledVSSFactory.java  ShamirInterfaces.java
jni/src/main/java/org/derecalliance/derec/crypto/: DerecCryptoBridgeTestMain.java  DerecCryptoImpl.java  DerecCryptoInterface.java
jni/src/proto/: bridge.proto
jni/src/proto/bridge/: bridge.proto
src/: lib.rs
src/channel/: emailaddress.rs  key.rs  keyring.rs  mod.rs  pgp.rs
src/pairing/: mod.rs  pairing_ecies.rs  pairing_mlkem.rs
src/pairing/mlkem/: mod.rs
src/secret_sharing/: adss.rs  mod.rs  shamir.rs  utils.rs  vss.rs
src/secure_channel/: encrypt.rs  mod.rs  sign.rs
src/secure_channel/pke/: encrypt.rs  mod.rs
src/secure_channel/ske/: mod.rs
